# Traffic-GPT-

./: Makefile  README.md
Police_app/app/: build.gradle
Police_app/gradle/: libs.versions.toml
User_app/: gradle.properties  settings.gradle.kts
User_app/Trafic_GPT/: settings.gradle.kts
User_app/app/: build.gradle.kts  google-services.json
backend/: .gitignore  README.md  pyproject.toml
backend/configs/geofence/: bangalore_boundary.geojson
backend/configs/model_configs/: ocr.yaml  segmentation.yaml
backend/configs/training_configs/: hyperparams.yaml
backend/src/api/: app.py
backend/src/api/routes/: detect.py
backend/src/api/schemas/: response.py
backend/src/data/: __init__.py  astram_loader.py
backend/src/pipeline/: inference_pipeline.py
backend/src/stages/: __init__.py  image_quality.py  rule_engine.py  sign_detection.py  vehicle_detection.py
backend/src/utils/: geo_utils.py  image_utils.py  logger.py
backend/tests/: test_rule_engine.py
backend/training/: evaluate.py  train_fraud_classifier.py  train_segmentation.py  train_sign_detector.py
configs/model_configs/: sign_detection.yaml  vehicle_detection.yaml
data/annotations/: .gitkeep
src/: __init__.py
src/api/: __init__.py
src/models/: __init__.py
src/pipeline/: __init__.py
src/stages/: duplicate_detection.py  fraud_detection.py  gps_validation.py  multi_image_verify.py  plate_ocr.py  scene_segmentation.py
src/utils/: __init__.py  embedding_utils.py
tests/: test_api.py  test_astram_data.py  test_quality.py
training/: train_plate_detector.py  train_vehicle_detector.py
(+66 files in other folders)
